--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "node-fetch": "^2.7.0",
-    "node-pty": "^1.0.0"
+    "node-pty": "^1.0.0",
+    "strip-ansi": "^7.1.0"
   }
 }
