--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
+  "scripts": {
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
+  },
   "dependencies": {
     "chalk": "^4.1.2",
     "node-fetch": "^2.7.0",
     "node-pty": "^1.0.0",
     "strip-ansi": "^7.1.0"
+  },
+  "devDependencies": {
+    "@vitest/coverage-c8": "^0.33.0",
+    "vitest": "^3.1.3"
   }
 }
