--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
+  "name": "codex-guard",
+  "version": "1.0.0",
+  "description": "A lightweight CLI wrapper around the OpenAI Codex CLI that enforces a configurable daily token cap",
+  "main": "guard.js",
+  "bin": {
+    "guard": "./cli.js"
+  },
   "scripts": {
     "test": "vitest",
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "chalk": "^4.1.2",
+    "commander": "^11.0.0",
     "node-fetch": "^2.7.0",
     "node-pty": "^1.0.0",
     "strip-ansi": "^7.1.0"
@@ -12,5 +20,6 @@
   "devDependencies": {
     "@vitest/coverage-c8": "^0.33.0",
     "vitest": "^3.1.3"
-  }
+  },
+  "license": "MIT"
 }
