--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "blessed": "^0.1.81",
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
+    "enquirer": "^2.4.1",
+    "ink": "^4.4.1",
+    "inquirer": "^12.6.1",
     "node-fetch": "^2.7.0",
     "node-pty": "^1.0.0",
+    "react": "^18.3.1",
+    "react-reconciler": "^0.29.2",
     "strip-ansi": "^7.1.0"
   },
-  "devDependencies": {
-    "@vitest/coverage-c8": "^0.33.0",
-    "vitest": "^3.1.3"
-  },
-  "license": "MIT"
+  "license": "MIT",
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
