--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "node-pty": "^1.0.0",
     "react": "^18.3.1",
     "react-reconciler": "^0.29.2",
-    "strip-ansi": "^7.1.0"
+    "strip-ansi": "^7.1.0",
+    "zod": "^3.24.4"
   },
   "license": "MIT",
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
