--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "inquirer": "^12.6.1",
     "node-fetch": "^2.7.0",
     "node-pty": "^1.0.0",
+    "openai": "^4.100.0",
     "react": "^18.3.1",
     "react-reconciler": "^0.29.2",
     "strip-ansi": "^7.1.0",
